fix: education not word wrapping

--- a/pages/candidates/candidate.module.scss
+++ b/pages/candidates/candidate.module.scss
@@ -116,6 +116,9 @@
     &__infoLabel {
       color: $primary-color;
     }
+    &__infoAnswer {
+      word-wrap: break-word;
+    }
     &__partyFlag {
       margin-bottom: unset;
     }
